--- a/main.css
+++ b/main.css
@@ -1,29 +1,25 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
 
 #product-overview {
-    background: #ff1b68;
-    width: 100%;
-    height: 528px;
-    padding: 10px;
-    border: 5px solid black;
-    margin: 10px;
-    
+  background: #ff1b68;
+  width: 100%;
+  height: 528px;
 }
 
 .section-title {
-    color: #2ddf5c;
+  color: #2ddf5c;
 }
 
 #product-overview h1 {
-    color: white;
-    font-family: 'Anton', sans-serif;
+  color: white;
+  font-family: "Anton", sans-serif;
 }
 
 /* h1 {
