--- a/section06-positioning-elements-with-css/main.css
+++ b/section06-positioning-elements-with-css/main.css
@@ -1,8 +1,10 @@
 #product-overview {
+  position: relative;
   background: url("freedom.jpg");
   width: 100%;
   height: 528px;
   padding: 10px;
+  margin-top: 43px;
 }
 
 .section-title {
@@ -11,6 +13,9 @@
 }
 
 #product-overview h1 {
+  position: absolute;
+  bottom: 4%;
+  left: 4%;
   color: white;
   font-family: "Anton", sans-serif;
 }
